Source/WebKit/mac: Missing NSForegroundColorAttributeName should be treated as black instead of transparent. https://bugs.webkit.org/show_bug.cgi?id=76490 <rdar://problem/9460733>

Starting with Lion, there is no more NSForegroundColor attribute in the dictionary
if the color matches the default (solid black).
The fix consists in treating the lack of color as solid black instead of transparent as
we did before.

Added a TestWebKitAPI test.
        
Reviewed by Darin Adler and Dan Bernstein.

* WebView/WebHTMLView.mm:
(-[WebHTMLView _styleForAttributeChange:]):

Tools: Missing NSForegroundColorAttributeName should be treated as black instead of transparent.
https://bugs.webkit.org/show_bug.cgi?id=76490
<rdar://problem/9460733>

Added TestWebKitAPI test.
        
Reviewed by Dan Bernstein.

* TestWebKitAPI/TestWebKitAPI.xcodeproj/project.pbxproj: Added new test file.
* TestWebKitAPI/Tests/mac/InspectorBar.mm: Added test that calls
changeAttributes to the WebView.



git-svn-id: svn://svn.chromium.org/blink/trunk@105291 bbb929c8-8fbe-4397-9dbb-9b2b20218538