third_party/WebKit/Source/WebKit/mac/WebView/WebHTMLView.mm
@@ -4603,6 +4603,8 @@ NSStrokeColorAttributeName        /* NSColor, default nil: same as foreground co
     ca = [a objectForKey:NSForegroundColorAttributeName];
     cb = [b objectForKey:NSForegroundColorAttributeName];
     if (ca == cb) {
+        if (!ca)
+            ca = [NSColor blackColor];
         [style setColor:[self _colorAsString:ca]];
     }
 
